src/ggrc/assets/javascripts/generated/ggrc_filter_query_parser.js
/*
    Copyright (C) 2017 Google Inc.
    Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
*/

/*
DO NOT EDIT - this is an auto generated file.

The file was generated by peg.js from src/parser/parsec.pegjs 
see: src/parser/generate_parser.js

*/

GGRC.query_parser = {
  parse: function parse(query) {
    try {
      return this.generated.parse(query);
    } catch (e) {
      // force texst search if anything goes wrong
      return this.generated.parse("~" + query);
    }
  },
  join_queries: function(left, right, op_key) {
    var expression = null,
        op = {},
        keys = jQuery.unique(left.keys.concat(right.keys));
    if (!left.expression.op){
      return right;
    }
    if (!right.expression.op){
      return left;
    }
    if (op_key && op_key == "OR") {
      op = {
        name: "OR",
        evaluate: function(val1, val2) { return val1 || val2; }
      };
    } else {
      op = {
        name: "AND",
        evaluate: function(val1, val2) { return val1 && val2; }
      };
    }
    expression = {
      left: left.expression,
      op: op,
      right: right.expression,
      evaluate: function(values) {
        return op.evaluate(left.expression.evaluate(values), right.expression.evaluate(values));
      }
    }
    return {
      expression: expression,
      keys: keys,
      order_by: right.order_by,
      evaluate: function(values, keys) {
        try {
          return expression.evaluate(values, keys)
        } catch (e) {
          return false;
        }
      }
    }
  },
  generated: (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(only_order_by) {
              return {
                expression: {},
                keys: [],
                order_by: only_order_by,
                evaluate: function(values, keys) {
                  // functions evaluates the current expresion tree, with the given
                  // values
                  //
                  // * values, Object with all the keys as in the keys array, and their
                  //   coresponding values
                  return true;
                }
              };
            },
        peg$c1 = function(or_exp, order_by) {
              var keys = jQuery.unique(or_exp.keys.sort());
              delete or_exp.keys;
              return {
                expression: or_exp,
                keys: keys,
                order_by: order_by,
                evaluate: function(values, keys) {
                  // functions evaluates the current expresion tree, with the given
                  // values
                  //
                  // * values, Object with all the keys as in the keys array, and their
                  //   coresponding values
                  try {
                    return or_exp.evaluate(values, keys);
                  } catch (e) {
                    return false;
                  }
                }
              };
            },
        peg$c2 = function() {
              return {
                expression: {},
                keys: [],
                order_by: {
                  keys: [],
                  order: '',
                  compare: null
                },
                evaluate: function(values, keys) {
                  return true;
                }
              };
            },
        peg$c3 = { type: "any", description: "any character" },
        peg$c4 = function() {
              return false;
            },
        peg$c5 = " ",
        peg$c6 = { type: "literal", value: " ", description: "\" \"" },
        peg$c7 = function(only_order_by) {
              return only_order_by;
            },
        peg$c8 = function() {
              return {
                keys: [],
                order: '',
                compare: null
              };
            },
        peg$c9 = "order by",
        peg$c10 = { type: "literal", value: "order by", description: "\"order by\"" },
        peg$c11 = function(word_list, order) {
              return {
                keys: word_list,
                order: order,
                compare: function(val1, val2){
                  for (var i=0 ; i < word_list.length; i++){
                    var key = word_list[i];
                    if (val1[key] !== val2[key]){
                      var a = parseFloat(val1[key]) || val1[key],
                          b = parseFloat(val2[key]) || val2[key];
                      return (a < b) ^ (order !== 'asc')
                    }
                  }
                  return false;
                }
              };
            },
        peg$c12 = ",",
        peg$c13 = { type: "literal", value: ",", description: "\",\"" },
        peg$c14 = function(word, word_list) {
              return [word].concat(word_list);
            },
        peg$c15 = function(word) {
              return [word];
            },
        peg$c16 = "desc",
        peg$c17 = { type: "literal", value: "desc", description: "\"desc\"" },
        peg$c18 = function() {
              return 'desc';
            },
        peg$c19 = "asc",
        peg$c20 = { type: "literal", value: "asc", description: "\"asc\"" },
        peg$c21 = function() {
              return 'asc';
            },
        peg$c22 = function(left, op, right) {
              var keys = left.keys.concat(right.keys);
              delete right.keys;
              delete left.keys;
              return {
                left: left,
                op: op,
                right: right,
                keys: keys,
                evaluate: function(values) {
                  return op.evaluate(left.evaluate(values), right.evaluate(values));
                }
              };
            },
        peg$c23 = function(left, op, right) {
              var keys = left.keys.concat(right.keys);
              delete right.keys;
              delete left.keys;
              return {
                left:left,
                op: op,
                right: right,
                keys: keys,
                evaluate: function(values) {
                  return op.evaluate(left.evaluate(values), right.evaluate(values));
                }
              };
            },
        peg$c24 = function(left, op, right) {
              var lleft = left.toLowerCase();
              return {
                left: lleft,
                op: op,
                right: right,
                keys: [lleft],
                evaluate: function(values){
                  if (op.name != "~" && op.name != "!~" &&
                      (moment(right, "M/D/YYYY", true).isValid() ||
                      moment(right, "YYYY-M-D", true).isValid())) {
                    right = moment(right).format("YYYY-MM-DD");
                  }
                  return op.evaluate(values[lleft], right);
                }
              };
            },
        peg$c25 = "#",
        peg$c26 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c27 = function(relevant) {
              return {
                object_name: relevant[0],
                op: {name: "relevant"},
                ids: relevant.slice(1),
                keys: [],
                evaluate: function(values, keys){
                  return true;
                }
              };
            },
        peg$c28 = "~",
        peg$c29 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c30 = function(characters) {
              return {
                text: characters.join("").trim(),
                op: {name:'text_search'},
                keys: [],
                evaluate: function(values, keys){
                   keys = keys || Object.keys(values);

                  function comparator(a, b){
                    return a.toUpperCase().indexOf(b.toUpperCase()) > -1
                  }

                  return keys.reduce(function(result, key){
                    if (result) return result;
                    if (values.hasOwnProperty(key)){
                      var value = values[key];
                      if (jQuery.type(value) === "string" ){
                        return comparator(value, this.text);
                      } else if (jQuery.type(value) === "array") {
                        return value.reduce(function(result, val){
                          return result || this.evaluate(val);
                        }.bind(this), false);
                      } else if (jQuery.type(value) === "object"){
                        return this.evaluate(value);
                      }
                    }
                    return result;
                  }.bind(this), false);
                }
              };
            },
        peg$c31 = "!~",
        peg$c32 = { type: "literal", value: "!~", description: "\"!~\"" },
        peg$c33 = function(characters) {
              return {
                text: characters.join("").trim(),
                op: {name: 'exclude_text_search'},
                keys: [],
                evaluate: function(values, keys){
                   keys = keys || Object.keys(values);

                  function comparator(a, b){
                    return a.toUpperCase().indexOf(b.toUpperCase()) == -1
                  }

                  return keys.reduce(function(result, key){
                    if (!result) return result;
                    if (values.hasOwnProperty(key)){
                      var value = values[key];
                      if (jQuery.type(value) === "string" ){
                        return comparator(value, this.text);
                      } else if (jQuery.type(value) === "array") {
                        return value.reduce(function(result, val){
                          return result || this.evaluate(val);
                        }.bind(this), false);
                      } else if (jQuery.type(value) === "object"){
                        return this.evaluate(value);
                      }
                    }
                    return result;
                  }.bind(this), true);
                }
              };
            },
        peg$c34 = function(or_exp) {
              return or_exp;
            },
        peg$c35 = function(word) {
              return word.join('');
            },
        peg$c36 = "\"",
        peg$c37 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c38 = /^[a-zA-Z0-9_\-.\/]/,
        peg$c39 = { type: "class", value: "[a-zA-Z0-9_\\-./]", description: "[a-zA-Z0-9_\\-./]" },
        peg$c40 = "\\\"",
        peg$c41 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c42 = function() {
              return '"';
            },
        peg$c43 = /^[^"]/,
        peg$c44 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c45 = "and",
        peg$c46 = { type: "literal", value: "AND", description: "\"AND\"" },
        peg$c47 = function() {
              return {
                name: 'AND',
                evaluate: function(val1, val2) { return val1 && val2; }
              };
            },
        peg$c48 = "&&",
        peg$c49 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c50 = "or",
        peg$c51 = { type: "literal", value: "OR", description: "\"OR\"" },
        peg$c52 = function() {
              return {
                name: 'OR',
                evaluate: function(val1, val2) { return val1 || val2;}
              };
            },
        peg$c53 = "||",
        peg$c54 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c55 = function() {
              return {
                name: 'OR',
                evaluate: function(val1, val2) { return val1 || val2; }
              };
            },
        peg$c56 = "=",
        peg$c57 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c58 = function(op) {
              return {
                name: op,
                evaluate: function(val1, val2) {

                  if (jQuery.type(val1) === "array") {
                    return val1.reduce(function(result, value) {
                      return result || this.evaluate(value, val2);
                    }.bind(this), false);
                  } else if (jQuery.type(val1) === "object") {
                    return Object.keys(val1).reduce(function(result, key) {
                      return result || this.evaluate(val1[key], val2);
                    }.bind(this), false);
                  } else if (jQuery.type(val1) === "string") {
                    return val1.toUpperCase() == val2.toUpperCase();
                  } else {
                    return val1 == val2;
                  }
                }
              };
            },
        peg$c59 = "!=",
        peg$c60 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c61 = function(op) {
              return {
                name: op,
                evaluate: function(val1, val2) {

                  if (jQuery.type(val1) === "array") {
                    return val1.reduce(function(result, value) {
                      return result || this.evaluate(value, val2);
                    }.bind(this), false);
                  } else if (jQuery.type(val1) === "object") {
                    return Object.keys(val1).reduce(function(result, key) {
                      return result || this.evaluate(val1[key], val2);
                    }.bind(this), false);
                  } else if (jQuery.type(val1) === "string") {
                    return val1.toUpperCase() != val2.toUpperCase();
                  } else {
                    return val1 != val2;
                  }
                }
              };
            },
        peg$c62 = "<",
        peg$c63 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c64 = function(op) {
              return {
                name: op,
                evaluate: function(val1, val2) {
                  return val1 < val2;
                }
              };
            },
        peg$c65 = ">",
        peg$c66 = { type: "literal", value: ">", description: "\">\"" },
        peg$c67 = function(op) {
              return {
                name: op,
                evaluate: function(val1, val2) {
                  return val1 > val2;
                }
              };
            },
        peg$c68 = function(op) {
              return {
                name: op,
                evaluate: function(val1, val2) {

                  if (jQuery.type(val1) === "array") {
                    return val1.reduce(function(result, value) {
                      return result || this.evaluate(value, val2);
                    }.bind(this), false);
                  } else if (jQuery.type(val1) === "object") {
                    return Object.keys(val1).reduce(function(result, key) {
                      return result || this.evaluate(val1[key], val2);
                    }.bind(this), false);
                  } else if (jQuery.type(val1) === "string") {
                    return val1.toUpperCase().indexOf(val2.toUpperCase()) > -1 ;
                  } else {
                    return false;
                  }
                }
              };
            },
        peg$c69 = function(op) {
              return {
                name: op,
                evaluate: function(val1, val2) {
                  if (jQuery.type(val1) === "array") {
                    return val1.reduce(function(result, value) {
                      return result || this.evaluate(value, val2);
                    }.bind(this), false);
                  } else if (jQuery.type(val1) === "object") {
                    return Object.keys(val1).reduce(function(result, key) {
                      return result || this.evaluate(val1[key], val2);
                    }.bind(this), false);
                  } else if (jQuery.type(val1) === "string") {
                    // the comparison is done here
                    return val1.toUpperCase().indexOf(val2.toUpperCase()) == -1 ;
                  } else {
                    return false;
                  }
                }
              };
            },
        peg$c70 = "is",
        peg$c71 = { type: "literal", value: "is", description: "\"is\"" },
        peg$c72 = function(op) {
              return {
                name: op,
              };
            },
        peg$c73 = "(",
        peg$c74 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c75 = ")",
        peg$c76 = { type: "literal", value: ")", description: "\")\"" },
        peg$c77 = /^[ \t\r\n\f]/,
        peg$c78 = { type: "class", value: "[ \\t\\r\\n\\f]", description: "[ \\t\\r\\n\\f]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseonly_order_by();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parse_();
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parse_();
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parseor_exp();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseorder_by();
            if (s3 !== peg$FAILED) {
              s4 = [];
              s5 = peg$parse_();
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parse_();
              }
              if (s4 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c1(s2, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = [];
          s2 = peg$parse_();
          while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = peg$parse_();
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2();
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = [];
            if (input.length > peg$currPos) {
              s2 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            while (s2 !== peg$FAILED) {
              s1.push(s2);
              if (input.length > peg$currPos) {
                s2 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
            }
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c4();
            }
            s0 = s1;
          }
        }
      }

      return s0;
    }

    function peg$parseorder_by() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 32) {
        s1 = peg$c5;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseonly_order_by();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c7(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parse_();
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parse_();
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c8();
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parseonly_order_by() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 8).toLowerCase() === peg$c9) {
          s2 = input.substr(peg$currPos, 8);
          peg$currPos += 8;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parse_();
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseword_list();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseorder();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c11(s4, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseword_list() {
      var s0, s1, s2, s3;
